# Cluegonauts

./: .gitignore  README.md  design_diagrams.md  pyproject.toml
cluegonauts/app/: asgi.py  settings.py  urls.py  wsgi.py
cluegonauts/clueless/: admin.py  apps.py  classes.py  consumers.py  forms.py  gamestateinjector.py  models.py  routing.py  tests.py  urls.py  utils.py  views.py
cluegonauts/clueless/migrations/: 0001_initial.py  0002_gamesession_case_file_cards_gamesession_current_turn_and_more.py  0003_gamesession_location_state.py  0004_alter_gamesession_selected_players.py
cluegonauts/clueless/templates/clueless/: base.html  end_game.html  gameb.html  index.html
